<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
            style="@style/matchParent"
    >
        <android.support.constraint.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <android.support.design.widget.TextInputEditText
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toTopOf="parent"



                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:hint="@string/txt_full_name"
                        android:id="@+id/telFullName"
                        android:background="@drawable/bg_edit_radius_white" android:inputType="text"/>



                <android.support.design.widget.TextInputEditText
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/telFullName"
                        app:layout_constraintEnd_toEndOf="@+id/telFullName"
                        app:layout_constraintStart_toStartOf="@+id/telFullName"


                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:hint="@string/txt_update_email"
                        android:id="@+id/telEmail"
                        android:background="@drawable/bg_edit_radius_white"
                        android:inputType="text"/>




                <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/telEmail"
                        app:layout_constraintEnd_toEndOf="@+id/telEmail"
                        app:layout_constraintStart_toStartOf="@+id/telEmail"
                        android:gravity="center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:hint="@string/txt_birthday"
                        android:id="@+id/telBirthday"
                        android:background="@drawable/bg_edit_radius_white"/>
            <Button
                    android:text="@string/txt_change_password_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSave" app:layout_constraintEnd_toEndOf="@+id/telBirthday"
                    app:layout_constraintStart_toStartOf="@+id/telBirthday" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/telBirthday"
                    android:background="@drawable/bg_btn_tab_phone" android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>