<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
            style="@style/matchParent"
    >
        <android.support.constraint.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"

                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toTopOf="parent"

                        android:drawableRight="@drawable/ic_login_password"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:hint="@string/txt_odl_password"
                        android:id="@+id/telOldPassword"
                        android:background="@drawable/bg_edit_radius_white" android:inputType="textPassword"/>


                <android.support.design.widget.TextInputEditText
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:drawableRight="@drawable/ic_login_password"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/telOldPassword"
                        app:layout_constraintEnd_toEndOf="@+id/telOldPassword"
                        app:layout_constraintStart_toStartOf="@+id/telOldPassword"
                        android:hint="@string/txt_new_password"
                        android:id="@+id/telNewPassword"
                        android:background="@drawable/bg_edit_radius_white" android:inputType="textPassword"/>




                <android.support.design.widget.TextInputEditText
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:drawableRight="@drawable/ic_login_password"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:hint="@string/txt_new_confirm_password"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/telNewPassword"
                        app:layout_constraintEnd_toEndOf="@+id/telNewPassword"
                        app:layout_constraintStart_toStartOf="@+id/telNewPassword"
                        android:id="@+id/telNewConfirmPassword"
                        android:background="@drawable/bg_edit_radius_white" android:inputType="textPassword"/>
            <Button
                    android:text="@string/txt_change_password_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSave"
                    app:layout_constraintEnd_toEndOf="@+id/telNewConfirmPassword"
                    app:layout_constraintStart_toStartOf="@+id/telNewConfirmPassword" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/telNewConfirmPassword"
                    android:background="@drawable/bg_btn_tab_phone" android:textStyle="bold"
                    android:textColor="@color/colorWhite"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>