<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:textColor="#212121"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    tools:text="Hệ thống chăm sóc khách hàng Hải Phát Land"
                    android:text="@string/text_title_form_login"/>

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:textSize="25sp" tools:text="Đăng nhập" android:text="@string/text_sign_in"
                    android:textColor="@color/colorText33"/>

            <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Quên mật khẩu ?"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
                    android:text="@string/text_forgot_password"
                    android:textColor="@color/colorText21"/>


                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="24dp"
                        android:drawableRight="@drawable/ic_login_user"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:hint="@string/edit_text_account" android:id="@+id/telUsername"
                        android:background="@drawable/bg_edit_radius_white" android:inputType="phone"/>




                <android.support.design.widget.TextInputEditText
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/telUsername"
                        app:layout_constraintEnd_toEndOf="@+id/telUsername"
                        app:layout_constraintStart_toStartOf="@+id/telUsername"

                        android:drawableRight="@drawable/ic_login_password"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:hint="@string/edit_text_password"
                        android:id="@+id/telPassword"
                        android:background="@drawable/bg_edit_radius_white"
                        android:inputType="textPassword"/>

            <Button
                    android:text="@string/text_sign_in"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/btnSignIn" app:layout_constraintEnd_toEndOf="@+id/telPassword"
                    app:layout_constraintStart_toStartOf="@+id/telPassword" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/telPassword" android:background="@drawable/bg_btn"
                    android:textColor="@color/colorWhite" android:textStyle="bold"/>
            <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textSize="8sp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Phiên bản hệ thống 1.0 - Bản quyền thuộc về Hải Phát Land"
                    android:text="@string/text_app_name_permission"
                    android:textColor="@color/colorText21"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>