<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
            style="@style/matchParent"
    >
        <android.support.constraint.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:textColor="#212121"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    tools:text="Hệ thống chăm sóc khách hàng Hải Phát Land"
                    android:text="@string/text_title_form_login"/>

            <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Phiên bản hệ thống 1.0 - Bản quyền thuộc về Hải Phát Land"
                    android:text="@string/text_app_name_permission" android:textColor="@color/colorText21"/>


                <android.support.design.widget.TextInputEditText
                        android:layout_height="50dp"
                        android:drawableRight="@drawable/ic_login_user"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:hint="@string/edit_text_account"
                        android:id="@+id/telUsername"
                        android:layout_width="0dp"

                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:background="@drawable/bg_edit_radius_white"/>

            <Button
                    android:text="@string/txt_tab_user_send"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/btnSignIn"
                    android:background="@drawable/bg_btn"
                    android:textColor="@color/colorWhite" android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/telUsername"
                    app:layout_constraintStart_toStartOf="@+id/telUsername" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/telUsername"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>