<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            style="@style/matchParent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".viewcontroller.home.ProjectActivity">


            <TextView
                    android:text="@string/text_select_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent" android:textStyle="bold"
                    android:textColor="@color/colorText21" android:textSize="18sp"/>
            <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView4" android:id="@+id/rivProject"
                    android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"/>
            <TextView
                    android:text="@string/text_app_name_permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorText21"
                    android:textSize="8sp"/>

            <TextView
                    android:text="@string/text_no_data"
                    style="@style/wrapContent"
                    android:id="@+id/txtNoData"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/colorText21"
                    android:textSize="14sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"/>


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</layout>