<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.constraint.ConstraintLayout
            style="@style/matchWrap" android:layout_height="match_parent" android:background="@color/colorWhite">

        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <TextView
                        android:text="@string/txt_tab_user_header"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent" android:textSize="12sp"
                        android:textColor="@color/colorText21"/>



                <android.support.v4.view.ViewPager
                        android:id="@+id/container"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"
                        app:layout_constraintStart_toStartOf="@+id/textView6"
                        app:layout_constraintEnd_toEndOf="@+id/textView6"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/editText"
                        app:layout_constraintEnd_toEndOf="@+id/container"
                        app:layout_constraintStart_toStartOf="@+id/container"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/container"
                        android:background="@color/colorBackground"
                        android:hint="@string/txt_tab_user_content_reply" android:padding="14dp"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
        <Button
                android:text="@string/txt_tab_user_send"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_marginBottom="16dp"

                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/bg_btn_tab_phone" tools:text="GỬI"
                android:textColor="@color/colorWhite" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
                android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="24dp"/>

    </android.support.constraint.ConstraintLayout>
</layout>